# latextable-lite

./: LICENSE  README.md  setup.cfg
examples/: advanced.py  basic.py  colors.py
src/latextable_lite/: latextable_lite.py  utils.py
src/latextable_lite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
