[metadata]
name = latextable-lite
version = 0.0.1
author = Megan Hu
author_email = meganhu@berkeley.edu
description = Create simple Latex tables.
long_description = file: README.md
url = https://github.com/huisyy/latextable-lite.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src